-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.0, 6.9.1
-
None
-
-
36216db95 (dev), 28553473c (dev), e5f4aa242 (6.10), 410f10ab6 (6.9), db1aae1cd (tqtc/lts-6.8), bb1afe717 (tqtc/lts-6.5)
this is probably duplicate of https://bugs.kde.org/show_bug.cgi?id=488551
how to crash
- install https://doc.qt.io/qt-6.9/qtqml-tooling-qml.html
- run
qml test.qml
- click crash! button
attachments
| file name | what |
|---|---|
| test.qml | code that creates crash! button |
| gdb_with_log.txt | gdb script (not portable) usage: gdb --command=gdb_with_log.txt |
| QQuickMenuPrivate_get called with pointer to destroyed QQuickMenu backtrace.txt | QQuickMenuPrivate::get called with pointer to destroyed QQuickMenu backtrace (output of gdb bt command) this is not where crash happens, crash location is inconsistent (qt 6.9.0) |
| log.txt | gererated by gdb generalize_log /tmp/log.txt custom command (created by gdb_with_log.txt script) (qt 6.9.0) |
- resulted in
-
QTBUG-139552 tst_qquickmenu: Test case loadMenuAsynchronously fails due to warning
-
- Open
-