src/quicktemplates/qquickmenu.cpp
@@ -884,10 +884,16 @@ void QQuickMenuPrivate::itemSiblingOrderChanged(QQuickItem *)
 
 void QQuickMenuPrivate::itemDestroyed(QQuickItem *item)
 {
-    QQuickPopupPrivate::itemDestroyed(item);
-    int index = contentModel->indexOf(item, nullptr);
-    if (index != -1)
-        removeItem(index, item);
+    if (item == contentItem) {
+        resetContentItem();
+    } else {
+        QQuickPopupPrivate::itemDestroyed(item);
+        if (contentModel) {
+            int index = contentModel->indexOf(item, nullptr);
+            if (index != -1)
+                removeItem(index, item);
+        }
+    }
 }
 
 void QQuickMenuPrivate::itemGeometryChanged(QQuickItem *item, QQuickGeometryChange, const QRectF &)
@@ -1320,6 +1326,20 @@ void QQuickMenuPrivate::contentData_clear(QQmlListProperty<QObject> *prop)
     QQuickMenuPrivate::get(q)->contentData.clear();
 }
 
+void QQuickMenuPrivate::resetContentItem()
+{
+    if (contentItem) {
+        QQuickItemPrivate::get(contentItem)->removeItemChangeListener(this, QQuickItemPrivate::Children);
+        QQuickItemPrivate::get(contentItem)->removeItemChangeListener(this, QQuickItemPrivate::Destroyed);
+        QQuickItemPrivate::get(contentItem)->removeItemChangeListener(this, QQuickItemPrivate::Geometry);
+
+        const auto children = contentItem->childItems();
+        for (QQuickItem *child : std::as_const(children))
+            QQuickItemPrivate::get(child)->removeItemChangeListener(this, QQuickItemPrivate::SiblingOrder);
+        contentItem = nullptr;
+    }
+}
+
 QQuickMenu::QQuickMenu(QObject *parent)
     : QQuickPopup(*(new QQuickMenuPrivate), parent)
 {
@@ -1336,6 +1356,15 @@ QQuickMenu::~QQuickMenu()
                           << "item count:"
                           << d->contentModel->count()
                           << "native item count:" << d->nativeItems.count();
+    // It would be better to reset the sub-menu within the menu-item during its destruction
+    // as there can be a chance that the parent menu use invalid reference leading to
+    // application crash (as mentioned in the bug report QTBUG-137160)
+    if (auto *menuItem = qobject_cast<QQuickMenuItem *>(d->parentItem)) {
+        if (menuItem->subMenu() == this) {
+            auto *menuItemPriv = QQuickMenuItemPrivate::get(menuItem);
+            menuItemPriv->setSubMenu(nullptr);
+        }
+    }
     // We have to remove items to ensure that our change listeners on the item
     // are removed. It's too late to do this in ~QQuickMenuPrivate, as
     // contentModel has already been destroyed before that is called.
@@ -1344,14 +1373,7 @@ QQuickMenu::~QQuickMenu()
     while (d->contentModel->count() > 0)
         d->removeItem(0, d->itemAt(0), QQuickMenuPrivate::DestructionPolicy::Destroy);
 
-    if (d->contentItem) {
-        QQuickItemPrivate::get(d->contentItem)->removeItemChangeListener(d, QQuickItemPrivate::Children);
-        QQuickItemPrivate::get(d->contentItem)->removeItemChangeListener(d, QQuickItemPrivate::Geometry);
-
-        const auto children = d->contentItem->childItems();
-        for (QQuickItem *child : std::as_const(children))
-            QQuickItemPrivate::get(child)->removeItemChangeListener(d, QQuickItemPrivate::SiblingOrder);
-    }
+    d->resetContentItem();
 }
 
 /*!
@@ -2133,10 +2155,12 @@ void QQuickMenu::contentItemChange(QQuickItem *newItem, QQuickItem *oldItem)
 
     if (oldItem) {
         QQuickItemPrivate::get(oldItem)->removeItemChangeListener(d, QQuickItemPrivate::Children);
+        QQuickItemPrivate::get(newItem)->removeItemChangeListener(d, QQuickItemPrivate::Destroyed);
         QQuickItemPrivate::get(oldItem)->removeItemChangeListener(d, QQuickItemPrivate::Geometry);
     }
     if (newItem) {
         QQuickItemPrivate::get(newItem)->addItemChangeListener(d, QQuickItemPrivate::Children);
+        QQuickItemPrivate::get(newItem)->addItemChangeListener(d, QQuickItemPrivate::Destroyed);
         QQuickItemPrivate::get(newItem)->updateOrAddGeometryChangeListener(d, QQuickGeometryChange::Width);
     }
 
