src/quicktemplates/qquickmenu_p_p.h
@@ -129,6 +129,8 @@ public:
     QPalette defaultPalette() const override;
     virtual QQuickPopup::PopupType resolvedPopupType() const override;
 
+    void resetContentItem();
+
     bool cascade = false;
     bool triedToCreateNativeMenu = false;
     int hoverTimer = 0;
@@ -137,9 +139,9 @@ public:
     qreal textPadding = 0;
     QPointer<QQuickMenu> parentMenu;
     QPointer<QQuickMenuItem> currentItem;
-    QQuickItem *contentItem = nullptr; // TODO: cleanup
+    QPointer<QQuickItem> contentItem;
     QList<QObject *> contentData;
-    QQmlObjectModel *contentModel;
+    QPointer<QQmlObjectModel> contentModel;
     QQmlComponent *delegate = nullptr;
     QString title;
     QQuickIcon icon;
